Bug 168059 - The order of tabs (whats on top, what is at the bottom) in the vertical tab in the image dialog is bit strange
Summary: The order of tabs (whats on top, what is at the bottom) in the vertical tab i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-08-22 11:07 UTC by Telesto
Modified: 2025-09-12 13:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (139.21 KB, image/png)
2025-08-22 11:08 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-08-22 11:07:41 UTC
Description:
The order of tabs (whats on top, what is at the bottom) in the vertical tab in the image dialog is bit strange

Steps to Reproduce:
1. Open Writer
2. Insert some image
3. Open the image properties dialog

Actual Results:
The tabs are organized arbitrary from my perspective 

Expected Results:
I would list the tab entry's the more commonly used to less commonly used. Or from general to specific tools. Sure there is the aspect of taste. Although some tabs belong together. So Area followed by Transparency| Crop followed by rotation (or other around)

A proposal
1. Position and size
2. Borders
3. Wrap
4. Area
5. Transparency
6. Crop
7. Rotation
8. Hyperlink
9. Macro


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ccb3362a71f88213615bd39bd819ab8ec20d86cc
CPU threads: 8; OS: macOS 14.7.4; UI render: Skia/Metal; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Telesto 2025-08-22 11:08:03 UTC
Created attachment 202447 [details]
Screenshot
Comment 2 Heiko Tietze 2025-08-22 11:59:38 UTC
Didn't change the order but open for improvements. Many of these dialogs have similar options such as Font, Font Effects, Indent, Position & Size, etc. and we should define the sequence for not just one dialog. What comes in mind similar to image properties is objects, frames, and sections.
Comment 3 Telesto 2025-08-22 13:52:14 UTC
(In reply to Heiko Tietze from comment #2)
> Didn't change the order but open for improvements. 
Check

> Many of these dialogs have similar options such as Font, Font Effects, Indent,  > Position & Size, etc. and we should define the sequence for not just one dialog. > What comes in mind similar to image properties is objects, frames, and sections.

True. How do you want to approach this? A bug report each and ever dialog? Or some overall bug report?

Or discuss the sequence in a UX session for various dialogs. Apply the result, and eventually tweak sequence based on bugreport/enhancement requests as needed?
Comment 4 Heiko Tietze 2025-08-22 13:54:06 UTC
Let's see if there is really a problem first.
Comment 5 Telesto 2025-08-22 20:28:21 UTC
(In reply to Heiko Tietze from comment #4)
> Let's see if there is really a problem first.

(In reply to Heiko Tietze from comment #2)
> Didn't change the order but open for improvements. Many of these dialogs
> have similar options such as Font, Font Effects, Indent, Position & Size,
> etc. and we should define the sequence for not just one dialog. What comes
> in mind similar to image properties is objects, frames, and sections.

Few other examples
Character dialog - fine
Paragraph dialog -> not OK (I would start with Alignment; Indent and spacings tab should be in proximity of Tabs tab)
Page style dialog -> after 'page' tab should follow the column tab, imho. No strong opinion about the other items
Paragrap style dialog -> not OK. The sequence should also be somewhat similar to the paragraph dialog

My logic is for general setting to more specific. And from more commonly used to more 'exotic'. And ideally so easy to recognize patterns. So area tab is always followed by transparency tab if applicable. And similar type of dialog should have similar sequence

I admit there quite a number of tabs in certain dialog which I tend to put at a arbitrary position

---
Other approach would be to set a default and being able to customize the sequence; but feels like over-designing
Comment 6 BogdanB 2025-08-26 17:38:18 UTC
Heiko, +1 from me, in the case you analyze this in design meeting. Maybe even a survey for the order.
Comment 7 Telesto 2025-09-01 20:36:26 UTC
Bug 168203 related. 

The order of tabs feels 'erratic'. I would tend to 'more commonly used first'. Whatever that actually entails exactly. (With the risk of being somewhat arbitrary).  However this 'keeps' the already existing problem of labels being presented in erratic order: not alphabetically). Like Screenshot attachment 202619 [details]. So it makes it a hassle to find the proper tab quickly by label.

 So the first question is how should tabs be identified? Primary by by icon? Or Primary by Label?

In case of identification by icon, you can sort the stuff more by 'more commonly used'. In case it's the label being primary reference, alphabetically makes the most sense.

Alphabetical order prevents endless debates.. And it's consistent for all dialogs. However it does put the Area Tab quite far away from Transparency tab (not really undesired)

-----

If alphabetically being chosen the problem arises where the label should be.
(screenshot attachment 202618 [details]). Bug 167084 opted for large icons with label below for less than 6 tabs.
 
Which doesn't result in a neat easy to read alphabetically list. I would opt for the same dialog as > than 6 tabs. It's by far to find the proper tab.

The objection: the row of tabs where not sorted alphabetically either. However, a vertically tabs presents items as a list; rows of tabs don't. (B) The distance has become larger. You could read to rows without much top/down eye movement. A list requires to look move down with my eyes to find the proper 'row' (tab)
So my subjective experience: I can find a tab which somewhat arbitrary organized quicker in row, compared to a list. In a list I  fallback to predict the location of the tab by the expected label of the tab (know out of experience/or common guess). Which makes alphabetically order useful.

----
If being opted for Icons as identification: hide the labels. Show them only on  mouse over. To prevent of being confronted by a non-alphabetically organized list of labels. It's ugly and distracting, IMHO

Also pick some icon size. No differentiation between more than 6 tabs or less. It makes the UI inconsistent and distracting. Each tab should have the same height
Comment 8 jan d 2025-09-02 17:30:01 UTC
I agree that the order currently seems erratic.

I would refrain form organizing alphabetically, since any lable change leads to position change then ("Options" and "Area" for example have their problems as labels). 

My proposal would be something like : 
- Position, Rotation, Crop are about the outer dimensions of the object. 
- Borders, Area and Transparency concern the area in the object. 
- Hyperlink and Macros are about interactions. 
- Wrap is about its interactions with text. 
- Options seems to be metadata and a bit of a "misc" place: Mostly accessibility but also the print setting.
Comment 9 Heiko Tietze 2025-09-11 09:28:56 UTC
We discussed the topic in the design meeting.

A rule of thumb could be:
1. "General" (as some summary )
2. "Specific" content (here image related)
3. rather "generic" items (font, alignment, etc.)
4. "Expert" functions last

"Options" for the image dialog is about a11y and therefore specific.

Past 26.2 the order was: Position and Size, Options, Wrap, Hyperlink, Rotation, Crop, Borders, Area, Transparency, Macro. 

Changes to the order have different reasons and were not done intentionally.

I suggest to reinstate this order and perhaps rename Options to Accessibility (I wonder if we had this question before, Stuart DYR?).
Comment 10 V Stuart Foote 2025-09-11 12:38:49 UTC
(In reply to Heiko Tietze from comment #9)

> Past 26.2 the order was: Position and Size, Options, Wrap, Hyperlink,
> Rotation, Crop, Borders, Area, Transparency, Macro. 
> 
> Changes to the order have different reasons and were not done intentionally.
> 
> I suggest to reinstate this order and perhaps rename Options to
> Accessibility (I wonder if we had this question before, Stuart DYR?).

Dug around and no prior discussion of the Image -> Properties -> Options tab as holding only Accessibility aspects and renaming. Don't think rename is necessary, potentially other aspects of an image could be recorded there (e.g. what filters have been applied, or what original path or OLE it represents). Not implemented of course but no reason to rename from Options to Accessibility.

As to reordering of the Dialog tabs, questions of consistency and legacy. The sequence has organically developed since StarOffice era. No record of OOo or AOO or LO effort to normalize the Tab order for the dialogs--and what we have is reasonable and familiar for users.  A massive change would be change for change's sake with no real benefits or UX improvement.

It would also be a documentation nightmare.

If we were looking to do a massive change, alphabetical is probably not feasible, as those would have to be localized. 

Note: we do alphabetize and localize for the Toolbar (tb) control customization selection listboxes--but otherwise the ordering of the tb are as static as the dialog tab order.

I suppose a case could be made that sequence/groupings of Toolbar button controls AND Dialog Tab order ought to be more closely aligned, but that also would be counter to legacy and familiarity and ultimately poor UX outcome.

Believe all this "churn" comes only upon implementation of the Vertical tabs (VT) for dialogs feature--which I believe is progressing well and incrementally with minimal impact on UX.  Keeping the legacy tab ordering is probably more appropriate for best UX outcome, and avoids the documentation and localization effort.

Minor adjustments of course, but just NO for some grand reshuffling.
Comment 11 Heiko Tietze 2025-09-12 07:32:33 UTC
(In reply to V Stuart Foote from comment #10)
> ... no prior discussion of the Image -> Properties -> Options tab
> as holding only Accessibility aspects and renaming. 
Maybe not "only a11y". What I had in mind was bug 155044, bug 39558, and bug 160367.

> Don't think rename is necessary
Ack
Comment 12 Heiko Tietze 2025-09-12 07:45:28 UTC
(In reply to Heiko Tietze from comment #9)
> *Pre* 26.2 the order was: Position and Size, Options, Wrap, Hyperlink,
> Rotation, Crop, Borders, Area, Transparency, Macro. 
The image properties is a flavor of the frames dialog. Which had before VT this order: Position and Size, Options, Wrap, Hyperlink, Borders, Area, Transparency, Columns, Macro.
Comment 13 Heiko Tietze 2025-09-12 07:47:02 UTC
And frame styles was and is: Organizer, Type, Options, Wrap, Area, Transparency, Border, Columns, Macro.
Comment 14 Commit Notification 2025-09-12 13:35:17 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/276db30733eb7e6e6c558e5f2b775e49b8fcfe31

Resolves tdf#168059 - Reinstate tab order at the image/frames dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.