Resolves tdf#168059 - Reinstate tab order at the image/frames dialog

Change-Id: I40dd3f59ccef90a33dc5d48568c132d76ec4fdf4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190856
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>